fixed spacings

--- a/src/scss/theme/portfolio/_header.scss
+++ b/src/scss/theme/portfolio/_header.scss
@@ -65,7 +65,7 @@
         position: absolute;
         transform: translateZ(30px) rotate3d(0,0,0,50deg);    
         right: 0px;
-        bottom: 75px;
+        bottom: 0px;
         width: 1150px;    
         background: transparent;
         height: fit-content;
