--- a/src/scss/theme/portfolio/_projects.scss
+++ b/src/scss/theme/portfolio/_projects.scss
@@ -1,6 +1,9 @@
 
 .project{
-    margin-bottom: 100px;
+    margin-bottom: 160px;
+    &> header{
+        margin-bottom: 14px;
+    }
 }
 /* headerr */
 .projekt-skills-bx{
